# corise-dagster

./: .Rprofile  .gitignore  Dockerfile  Makefile  _dependencies.R  docker-compose.yml  pyproject.toml
pipeline/: workspace.yaml
pipeline/tests/: test_answer.py
pipeline/workspaces/gdw/: deployment.py
pipeline/workspaces/gems/: deployment.py
week_1/challenge/: week_1_challenge.py
week_2/workspaces/: resources.py
week_2/workspaces/project/: week_2.py
week_3/workspaces/project/: week_3.py
week_4/workspaces/project/: week_4.py
